# loki-mcp-server

./: .gitignore  AGENTS.md  Dockerfile  INTEGRATION_GUIDE.md  README.md  SYSTEM_PROMPT.md  loki_client.py  pyproject.toml  server.py
.github/workflows/: build.yml  claude-pr-review.yml  codex-pr-review.yml  commitlint.yml  docker-build.yml  pr-checks.yml  submit-review-caller.yml
chart/: .argocd-source-loki-mcp.yaml  Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
