[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loki-mcp-server"
version = "0.1.0"
description = "MCP server for querying Loki logs with semantic understanding"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.7.0",
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "python-dateutil>=2.8.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
only-include = ["loki_client.py", "server.py"]
skip-directory = []
